# Platelet-Movie

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.devcontainer/: devcontainer-lock.json  devcontainer.json  post-create.sh
.github/: copilot-instructions.md  dependabot.yml
.github/aw/: actions-lock.json  multi-device-docs-tester.md
.github/workflows/: agentics-maintenance.yml  copilot-setup-steps.yml  deploy-github-pages.yml  multi-device-site-tester.lock.yml  multi-device-site-tester.md  pr-movie-report-test.yml  test-main.yml  test-pr.yml  weekly-movie-report.lock.yml  weekly-movie-report.md  weekly-movie-report.yml  weekly-status-report.lock.yml  weekly-status-report.md
docs/: README.md  app.js  data.json  index.html  styles.css
platelet_movie/: __init__.py  auth.py  cli.py  client.py  config.py  formatters.py  models.py  scraper.py  tmdb_client.py
scripts/: generate_site_data.py  lady_whistledown.py
site/: app.js  data-gb.json  data-in.json  data-us.json  data.json  index.html  styles.css
tests/: __init__.py  test_auth.py  test_cli.py  test_client.py  test_config.py  test_formatters.py  test_generate_site_data.py  test_lady_whistledown.py  test_models.py  test_scraper.py  test_tmdb_client.py
